# mira

./: .gitignore  README.md  pixi.toml  pyproject.toml
configs/: README.md  eval_world_model.yaml  train_codec.yaml  train_world_model.yaml
configs/actions/: rocket_league.yaml
configs/dataset/: rocket_league.yaml
configs/model/: latent_world_model.yaml  multi_wrapper_world_model.yaml  raev2_codec_tdown.yaml
configs/model/latent_world_model/: 1b.yaml
docs/: dataset_card.md
examples/: README.md  explore.py
examples/pong/: README.md  codec.py  data.py  eval_probe.py  generate_data.py  index.html  play.py  play_av.py  pong_audio.py  pong_env.py  render_video.py  train_av.py  train_codec.py  train_wm.py  world_model.py  world_model_av.py
examples/pong/runs/av/: audio_codec.pt
examples/pong/runs/codec/: extractor.pt
scripts/: README.md  bench_wm_speed.py  eval_world_model_offline.py  train_codec.py  train_world_model.py
src/mira/codec/: __init__.py  codec_model.py  loss.py  viz.py
src/mira/data/: __init__.py  dataset.py  decode.py  physics.py  training_loader.py  viz.py
src/mira/training/: checkpoint_manager.py  distributed.py  ema.py  lr_schedule.py  tracker.py  visualization.py
src/mira/training/metrics/: __init__.py  distributed_metric.py  frechet.py  image_metrics.py  world_model_metrics.py
src/mira/world_model/: latent_world_model.py  multi_wrapper_world_model.py
tests/codec/: conftest.py  test_codec_model.py  test_config.py  test_load_from_checkpoint.py  test_loss.py  test_train_hydra.py  test_vit_decoder.py
tests/codec/fixtures/: raev2_codec_tdown.yaml
tests/data/: conftest.py  test_actions.py  test_batch.py  test_clips.py  test_decode.py  test_events.py  test_from_hub.py  test_loader.py  test_loader_clip_guard.py  test_physics.py  test_schema.py  test_select.py  test_training_loader.py  test_training_loader_shuffle.py  test_viz.py
tests/inference/: conftest.py  test_eval_world_model_offline.py  test_rollout.py
tests/ml/: test_config_loading.py  test_ml_smoke.py
tests/training/: test_checkpoint_manager.py  test_distributed.py  test_ema.py  test_lr_schedule.py  test_metrics.py  test_visualization.py  test_world_model_metrics.py
tests/world_model/: conftest.py  test_action_encoder.py  test_actions_config.py  test_inference_context.py  test_latent_world_model.py  test_multi_wrapper_world_model.py  test_psd.py  test_rope.py  test_train_step.py  test_train_world_model_hydra.py  test_visualize.py  test_world_model_metrics.py
